Add basic layout

--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
 
   </header>
   <main>
-    <section class="left"></section>
+    <section class="left">
+      <figure>
+        <a href=""><img src="" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+    </section>
     <section class="middle"></section>
-    <section class="right"></section>
+    <section class="right">
+      <figure>
+        <a href=""><img src="" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+    </section>
   </main>
   <footer>
 
