--- a/index.html
+++ b/index.html
@@ -16,9 +16,56 @@
         <a href=""><img src="" alt=""></a>
         <figcaption></figcaption>
       </figure>
+
+      <figure>
+        <a href=""><img src="" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+
+      <figure>
+        <a href=""><img src="" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+
+      <figure>
+        <a href=""><img src="" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+
+      <figure>
+        <a href=""><img src="" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+
+      <figure>
+        <a href=""><img src="" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+
+      <figure>
+        <a href=""><img src="" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
     </section>
+
     <section class="middle"></section>
+
     <section class="right">
+      <figure>
+        <a href=""><img src="" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+
+      <figure>
+        <a href=""><img src="" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+
+      <figure>
+        <a href=""><img src="" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+
       <figure>
         <a href=""><img src="" alt=""></a>
         <figcaption></figcaption>
