Create image grid with flexbox

--- a/index.html
+++ b/index.html
@@ -13,42 +13,70 @@
   <main>
     <section class="left">
       <figure>
-        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="assets/Squad1G-Amber.JPG" alt=""></a>
         <figcaption></figcaption>
       </figure>
 
       <figure>
-        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="assets/Squad1G-Athene.JPG" alt=""></a>
         <figcaption></figcaption>
       </figure>
 
       <figure>
-        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="assets/Squad1G-Branco.JPG" alt=""></a>
         <figcaption></figcaption>
       </figure>
 
       <figure>
-        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="assets/Squad1G-Cedrik.JPG" alt=""></a>
         <figcaption></figcaption>
       </figure>
 
       <figure>
-        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="assets/Squad1G-Christian.JPG" alt=""></a>
         <figcaption></figcaption>
       </figure>
 
       <figure>
-        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="assets/Squad1G-Clarice.JPG" alt=""></a>
         <figcaption></figcaption>
       </figure>
 
       <figure>
-        <a href=""><img src="" alt=""></a>
+        <a href=""><img src="assets/Squad1G-Colin.JPG" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+
+      <figure>
+        <a href=""><img src="assets/Squad1G-Dylan.JPG" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+
+      <figure>
+        <a href=""><img src="assets/Squad1G-Fatima-A.JPG" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+
+      <figure>
+        <a href=""><img src="assets/Squad1G-Fatima-H.JPG" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+
+      <figure>
+        <a href=""><img src="assets/Squad1G-Halima.JPG" alt=""></a>
+        <figcaption></figcaption>
+      </figure>
+
+      <figure>
+        <a href=""><img src="assets/Squad1G-Haroub.JPG" alt=""></a>
         <figcaption></figcaption>
       </figure>
     </section>
 
-    <section class="middle"></section>
+    <section class="middle">
+      <h1>1G</h1>
+      <h2>& de Amstelcampus</h2>
+    </section>
 
     <section class="right">
       <figure>
