--- a/index.html
+++ b/index.html
@@ -12,65 +12,106 @@
   </header>
   <main>
     <section class="left">
-      <figure>
-        <a href=""><img src="assets/Squad1G-Amber.JPG" alt=""></a>
-        <figcaption></figcaption>
-      </figure>
+        <div class="grid-container">
 
-      <figure>
-        <a href=""><img src="assets/Squad1G-Athene.JPG" alt=""></a>
-        <figcaption></figcaption>
-      </figure>
-
-      <figure>
-        <a href=""><img src="assets/Squad1G-Branco.JPG" alt=""></a>
-        <figcaption></figcaption>
-      </figure>
-
-      <figure>
-        <a href=""><img src="assets/Squad1G-Cedrik.JPG" alt=""></a>
-        <figcaption></figcaption>
-      </figure>
-
-      <figure>
-        <a href=""><img src="assets/Squad1G-Christian.JPG" alt=""></a>
-        <figcaption></figcaption>
-      </figure>
-
-      <figure>
-        <a href=""><img src="assets/Squad1G-Clarice.JPG" alt=""></a>
-        <figcaption></figcaption>
-      </figure>
-
-      <figure>
-        <a href=""><img src="assets/Squad1G-Colin.JPG" alt=""></a>
-        <figcaption></figcaption>
-      </figure>
-
-      <figure>
-        <a href=""><img src="assets/Squad1G-Dylan.JPG" alt=""></a>
-        <figcaption></figcaption>
-      </figure>
-
-      <figure>
-        <a href=""><img src="assets/Squad1G-Fatima-A.JPG" alt=""></a>
-        <figcaption></figcaption>
-      </figure>
-
-      <figure>
-        <a href=""><img src="assets/Squad1G-Fatima-H.JPG" alt=""></a>
-        <figcaption></figcaption>
-      </figure>
-
-      <figure>
-        <a href=""><img src="assets/Squad1G-Halima.JPG" alt=""></a>
-        <figcaption></figcaption>
-      </figure>
-
-      <figure>
-        <a href=""><img src="assets/Squad1G-Haroub.JPG" alt=""></a>
-        <figcaption></figcaption>
-      </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Amber.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <div class="filler"></div>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Athene.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Branco.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Cedrik.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Christian.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Clarice.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Colin.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Dylan.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Fatima-A.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Fatima-H.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Halima.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Haroub.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Iris.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Joost.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Jordy.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Jules.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Julia.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Kim.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Luc.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Marcin.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Matthijs.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Nadia.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Nas.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+          <figure>
+            <a href=""><img src="assets/Squad1G-Ole.JPG" alt=""></a>
+            <figcaption></figcaption>
+          </figure>
+        </div>
     </section>
 
     <section class="middle">
