Add new font for header

--- a/index.html
+++ b/index.html
@@ -1,148 +1,284 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>1G Squad Page</title>
   <link rel="stylesheet" href="styles/style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header>
 
   </header>
   <main>
     <section class="left">
-        <div class="grid-container">
+      <div class="grid-container">
+        <figure>
+          <a href=""><img src="assets/Squad1G-Amber.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
 
-          <figure>
-            <a href=""><img src="assets/Squad1G-Amber.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <div class="filler"></div>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Athene.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Branco.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Cedrik.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Christian.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Clarice.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Colin.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Dylan.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Fatima-A.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Fatima-H.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Halima.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Haroub.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Iris.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Joost.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Jordy.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Jules.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Julia.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Kim.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Luc.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Marcin.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Matthijs.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Nadia.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Nas.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-          <figure>
-            <a href=""><img src="assets/Squad1G-Ole.JPG" alt=""></a>
-            <figcaption></figcaption>
-          </figure>
-        </div>
+        <div class="filler"></div>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Athene.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Branco.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Cedrik.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Christian.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Clarice.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Colin.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Dylan.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Fatima-A.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Fatima-H.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Halima.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Haroub.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Iris.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Joost.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Jordy.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Jules.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Julia.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Kim.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Luc.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Marcin.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Matthijs.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Nadia.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Nas.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Ole.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+      </div>
     </section>
 
     <section class="middle">
-      <h1>1G</h1>
-      <h2>& de Amstelcampus</h2>
+      <header>
+        <h1>SQUAD 1G</h1>
+        <h2>& de Amstelcampus</h2>
+      </header>
     </section>
 
     <section class="right">
-      <figure>
-        <a href=""><img src="" alt=""></a>
-        <figcaption></figcaption>
-      </figure>
+      <div class="grid-container">
+        <figure>
+          <a href=""><img src="assets/Squad1G-Amber.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
 
-      <figure>
-        <a href=""><img src="" alt=""></a>
-        <figcaption></figcaption>
-      </figure>
+        <div class="filler"></div>
 
-      <figure>
-        <a href=""><img src="" alt=""></a>
-        <figcaption></figcaption>
-      </figure>
+        <figure>
+          <a href=""><img src="assets/Squad1G-Athene.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
 
-      <figure>
-        <a href=""><img src="" alt=""></a>
-        <figcaption></figcaption>
-      </figure>
+        <figure>
+          <a href=""><img src="assets/Squad1G-Branco.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Cedrik.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Christian.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Clarice.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Colin.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Dylan.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Fatima-A.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Fatima-H.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Halima.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Haroub.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Iris.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Joost.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Jordy.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Jules.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Julia.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Kim.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Luc.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Marcin.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Matthijs.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Nadia.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Nas.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="assets/Squad1G-Ole.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
     </section>
   </main>
   <footer>
 
   </footer>
 </body>
+
 </html>
