Add basic layout to index

--- a/gezamenlijk/index.html
+++ b/gezamenlijk/index.html
@@ -1,204 +1,143 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Squad 1G</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <header></header>
-  <h1>SQUAD 1G</h1>
-  <h2>& de Amstelcampus</h2>
-  </header>
   <main>
-    <section class="left">
-      <div class="grid-container">
+    <div class="text-container">
+      <header>
+        <h1>1G</h1>
+        <h1 class="ampersand">&</h1>
+        <h2>Amstel campus</h2>
+      </header>
+      <p>
+        Welkom op de coolste squadpage van de coolste squad!
+        Check hier onze visitekaartjes en de mooiste gebouwen op de campus.
+      </p>
+    </div>
+
+    <div class="image-container">
+      <div class="grid-container campus">
         <figure>
-          <a href=""><img src="assets/Squad1G-Amber.JPG" alt=""></a>
+          <a href=""><img src="../assets/Squad1G-Amber.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Athene.JPG" alt=""></a>
+          <a href=""><img src="../assets/Squad1G-Athene.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Branco.JPG" alt=""></a>
+          <a href=""><img src="../assets/Squad1G-Branco.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Cedrik.JPG" alt=""></a>
+          <a href=""><img src="../assets/Squad1G-Cedrik.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Christian.JPG" alt=""></a>
+          <a href=""><img src="../assets/Squad1G-Christian.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Clarice.JPG" alt=""></a>
+          <a href=""><img src="../assets/Squad1G-Clarice.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Colin.JPG" alt=""></a>
+          <a href=""><img src="../assets/Squad1G-Colin.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Dylan.JPG" alt=""></a>
+          <a href=""><img src="../assets/Squad1G-Dylan.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Fatima-A.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Fatima-H.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Halima.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Haroub.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Iris.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Joost.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Jordy.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Jules.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Julia.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Kim.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Luc.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Marcin.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Matthijs.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Nadia.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Nas.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Ole.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
       </div>
-    </section>
+      </section>
 
-    <section class="right">
-      <div class="grid-container">
+      <div class="grid-container cards">
         <figure>
-          <a href=""><img src="assets/Squad1G-Amber.JPG" alt=""></a>
-          <figcaption></figcaption>
-        </figure>
-
-        <div class="filler"></div>
-
-        <figure>
-          <a href=""><img src="assets/Squad1G-Athene.JPG" alt=""></a>
+          <a href="https://ambersr.github.io/your-tribe-profile-card/" target="_blank"><img
+              src="../assets/Squad1G-Amber.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Branco.JPG" alt=""></a>
+          <a href="https://nyathene.github.io/your-tribe-profile-card/" target="_blank"><img
+              src="../assets/Squad1G-Athene.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Cedrik.JPG" alt=""></a>
+          <a href="https://brancovanbeek.github.io/your-tribe-profile-card/" target="_blank"><img
+              src="../assets/Squad1G-Branco.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Christian.JPG" alt=""></a>
+          <a href="https://cedrikstephen.github.io/your-tribe-profile-card/" target="_blank"><img
+              src="../assets/Squad1G-Cedrik.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Clarice.JPG" alt=""></a>
+          <a href="https://osaoni.github.io/your-tribe-profile-card/" target="_blank"><img
+              src="../assets/Squad1G-Christian.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Colin.JPG" alt=""></a>
+          <a href="https://clarice-cod.github.io/visitekaartje-clarice/" target="_blank"><img
+              src="../assets/Squad1G-Clarice.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Dylan.JPG" alt=""></a>
+          <a href="https://colindegroot.github.io/your-tribe-profile-card/" target="_blank"><img
+              src="../assets/Squad1G-Colin.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Fatima-A.JPG" alt=""></a>
+          <a href="https://divaninl.github.io/your-tribe-profile-card/" target="_blank"><img
+              src="../assets/Squad1G-Dylan.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Fatima-H.JPG" alt=""></a>
+          <a href="https://fatimazelay.github.io/your-tribe-profile-card/" target="_blank"><img
+              src="../assets/Squad1G-Fatima-A.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Halima.JPG" alt=""></a>
+          <a href=""><img src="../assets/Squad1G-Fatima-H.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Haroub.JPG" alt=""></a>
+          <a href="https://halima98.github.io/your-tribe-profile-card/" target="_blank"><img
+              src="../assets/Squad1G-Halima.JPG" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href="https://haroub-s.github.io/your-tribe-profile-card/" target="_blank"><img
+              src="../assets/Squad1G-Haroub.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
@@ -261,7 +200,8 @@
           <a href=""><img src="assets/Squad1G-Ole.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
-    </section>
+      </div>
+    </div>
   </main>
 </body>
 
