adjust grids to align with eachother

--- a/gezamenlijk/index.html
+++ b/gezamenlijk/index.html
@@ -17,7 +17,8 @@
       <header>
         <h1>1G</h1>
         <h1 class="ampersand">&</h1>
-        <h2>Amstel campus</h2>
+        <h2 class="subheader">Amstel campus</h2>
+        <h2 class="alt-subheader">Amstelcampus</h2>
       </header>
       <p>
         Welkom op de coolste squadpage van de coolste squad!
