Add filler divs to stagger grid

--- a/gezamenlijk/index.html
+++ b/gezamenlijk/index.html
@@ -28,6 +28,8 @@
 
     <div class="image-container">
       <div class="grid-container campus">
+        <div class="filler3 top"></div>
+        <div class="filler2 bottom"></div>
         <figure>
           <a href=""><img src="../assets/Squad1G-Amber.JPG" alt=""></a>
           <figcaption></figcaption>
@@ -71,6 +73,7 @@
       </section>
 
       <div class="grid-container cards">
+        <div class="filler1 top"></div>
         <figure>
           <a href="https://ambersr.github.io/your-tribe-profile-card/" target="_blank"><img
               src="../assets/Squad1G-Amber.JPG" alt=""></a>
@@ -204,6 +207,8 @@
       </div>
     </div>
   </main>
+
+  <script src="scripts/script.js"></script>
 </body>
 
 </html>
