Add icon to amstel link to communicate that it's a link

--- a/gezamenlijk/index.html
+++ b/gezamenlijk/index.html
@@ -17,8 +17,36 @@
       <header>
         <h1>1G</h1>
         <h1 class="ampersand">&</h1>
-        <h2 class="subheader">Amstel campus</h2>
-        <h2 class="alt-subheader">Amstelcampus</h2>
+        <h2 class="small-subheader">
+          <a href="amstel.html">
+            <div class="header-flex">
+              <div>
+                Amstel campus
+              </div>
+              <div class="header-svg">
+                <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="none">
+                  <path stroke="#ffffff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M6.343 17.657L17.657 6.343m0 0v8.485m0-8.485H9.172" />
+                </svg>
+              </div>
+            </div>
+          </a>
+        </h2>
+        <h2 class="large-subheader">
+          <a href="amstel.html">
+          <div class="header-flex">
+            <div>
+              Amstelcampus
+            </div>
+            <div>
+              <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none">
+                <path stroke="#ffffff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M6.343 17.657L17.657 6.343m0 0v8.485m0-8.485H9.172" />
+              </svg>
+            </div>
+          </div>
+          </a>
+        </h2>
       </header>
       <p>
         Welkom op de coolste squadpage van de coolste squad!
