--- a/gezamenlijk/index.html
+++ b/gezamenlijk/index.html
@@ -142,62 +142,62 @@
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Iris.JPG" alt=""></a>
+          <a href="https://irisvw.github.io/your-tribe-profile-card/"><img src="assets/Squad1G-Iris.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Joost.JPG" alt=""></a>
+          <a href="https://hubregtsejoost.github.io/your-tribe-profile-card/"><img src="assets/Squad1G-Joost.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Jordy.JPG" alt=""></a>
+          <a href="https://noxinput.github.io/your-tribe-profile-card/"><img src="assets/Squad1G-Jordy.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Jules.JPG" alt=""></a>
+          <a href="https://julesbruins.github.io/your-tribe-profile-card/"><img src="assets/Squad1G-Jules.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Julia.JPG" alt=""></a>
+          <a href="https://julia-stevens.github.io/your-tribe-profile-card/"><img src="assets/Squad1G-Julia.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Kim.JPG" alt=""></a>
+          <a href="https://kimnikitaschijf.github.io/your-tribe-profile-card/"><img src="assets/Squad1G-Kim.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Luc.JPG" alt=""></a>
+          <a href="https://debosos.github.io/your-tribe-profile-card/"><img src="assets/Squad1G-Luc.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Marcin.JPG" alt=""></a>
+          <a href="https://marsgotbars.github.io/your-tribe-profile-card-HvA/"><img src="assets/Squad1G-Marcin.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Matthijs.JPG" alt=""></a>
+          <a href="https://matthijs217.github.io/your-tribe-profile-card/"><img src="assets/Squad1G-Matthijs.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Nadia.JPG" alt=""></a>
+          <a href="file:///Users/nadia/Documents/GitHub/your-tribe-profile-card/index.html"><img src="assets/Squad1G-Nadia.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Nas.JPG" alt=""></a>
+          <a href="https://nmiaa.github.io/your-tribe-profile-card/"><img src="assets/Squad1G-Nas.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="assets/Squad1G-Ole.JPG" alt=""></a>
+          <a href="https://ofrqq.github.io/your-tribe-profile-card/"><img src="assets/Squad1G-Ole.JPG" alt=""></a>
           <figcaption></figcaption>
         </figure>
       </div>
