Add images to represent places on campus

--- a/gezamenlijk/index.html
+++ b/gezamenlijk/index.html
@@ -59,42 +59,52 @@
         <div class="filler3 top"></div>
         <div class="filler2 bottom"></div>
         <figure>
-          <a href=""><img src="../assets/Squad1G-Amber.JPG" alt=""></a>
+          <a href=""><img src="../assets/jakoba.jpg" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="../assets/Squad1G-Athene.JPG" alt=""></a>
+          <a href=""><img src="../assets/theo.jpg" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="../assets/Squad1G-Branco.JPG" alt=""></a>
+          <a href=""><img src="../assets/kohnstamm.jpg" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="../assets/Squad1G-Cedrik.JPG" alt=""></a>
+          <a href=""><img src="../assets/wibaut.jpg" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="../assets/Squad1G-Christian.JPG" alt=""></a>
+          <a href=""><img src="../assets/benno-premsela.jpg" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="../assets/Squad1G-Clarice.JPG" alt=""></a>
+          <a href=""><img src="../assets/Marie_Muller_Lulofs1.jpg" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="../assets/Squad1G-Colin.JPG" alt=""></a>
+          <a href=""><img src="../assets/hva0010623.jpg" alt=""></a>
           <figcaption></figcaption>
         </figure>
 
         <figure>
-          <a href=""><img src="../assets/Squad1G-Dylan.JPG" alt=""></a>
+          <a href=""><img src="../assets/amfi.jpg" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="../assets/hva-wibauthuis-fotomoniquekooijmans.jpeg" alt=""></a>
+          <figcaption></figcaption>
+        </figure>
+
+        <figure>
+          <a href=""><img src="../assets/hva-wibauthuis-fotomoniquekooijmans.jpeg" alt=""></a>
           <figcaption></figcaption>
         </figure>
       </div>
